--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "pidusage": "latest",
     "socket.io": "^2.3.0",
     "uuid": "^7.0.3",
-    "video-web-app-frontend": "github:oos-videochat/video-web-app#release-0.1"
+    "video-web-app-frontend": "github:oos-videochat/video-web-app#master"
   },
   "devDependencies": {
     "ts-node": "^8.9.0",
